Redesign and Organize portfolio - Edited About Page - Add Software carousel - Delete Services and Resume pages - Optimize Portfolio Page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1188,3 +1188,11 @@ section .container {
 .credits a:hover {
   color: #fff;
 }
+
+.portfolio-details .portfolio-info .skill-type li + li {
+  margin-top: 0px;
+}
+
+.portfolio-details .portfolio-info .skill-type {
+  margin-bottom: 10px;
+}
