Portfolio v2 - Add Portfolio loader in foliodb.js - Add 3 new demos - Optimize - Delete Videos - Load videos from Google Drive - Fix image resize error in details.html - Fix others problems

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1196,3 +1196,4 @@ section .container {
 .portfolio-details .portfolio-info .skill-type {
   margin-bottom: 10px;
 }
+.swiper-slide > img {width: 100%;}
